# Rust-embebido

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config  config.toml
src/: main.rs
