[package]
name = "led-blink-stm32l4-PAC"
version = "0.1.0"
authors = ["Alan Rodriguez <alan.9489@gmail.com>"]
edition = "2018"

[profile.release]
# optimize for size ('z' would optimize even more)
opt-level = 's'
# link with link time optimization (lto).
lto = true
# enable debugging in release mode.
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Nos da rutinas básicas de inicio para CPU ARM
cortex-m-rt = "0.7.5"
# Nos da acceso a registros propios de la arquitectura Cortex-M
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
# Contiene la rutina manejar "panic-halt" cuando tenemos errores
panic-halt = "0.2.0"

cortex-m-semihosting = "0.3.5"

panic-semihosting = "0.5.3"
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l476", "rt"] }
rtt-target = "0.6.1"

